--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -142,6 +142,8 @@ h1.heading {
 	width: 100%;
 	word-wrap: break-word;
 }
+.price{color:#333;font-size:17px;font-family:Montserrat,sans-serif;font-weight:700;letter-spacing:.6px;margin-bottom:8px;text-align:center;transition:all .3s}
+.price span{color:#999;font-size:13px;font-weight:400;text-decoration:line-through;margin-left:3px;display:inline-block}
 /**
 * End Products Grid
 */
